<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        />
    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/welcome"
        android:layout_marginBottom="15dp"
        android:text="Hello World!"/>

    <ImageView
        android:id="@+id/qrimg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:src="@drawable/qrlogo"
        android:layout_below="@+id/user_details"
        android:layout_marginBottom="30dp"
        />
    <Button
        android:id="@+id/scan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/qr_scan_btn"
        android:textSize="30sp"
        android:layout_below="@+id/qrimg"
        />
    <TextView
        android:id="@+id/scanned_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scan_btn"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        />
    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/click_here_to_save"
        android:textSize="30sp"
        android:layout_below="@+id/scanned_text"
        />
    <Button
        android:id="@+id/log_out"
        android:text="@string/log_out"
        android:layout_below="@+id/save_btn"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>