<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Register">

    <TextView
        android:text="@string/register"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/enter_email"
            android:labelFor="@+id/email" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/enter_password"
            android:labelFor="@+id/passwd" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwd"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/ProgressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/RegisterBtn"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/LoginNow"
        android:text="@string/click_to_login"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>